--- a/src/less/about.less
+++ b/src/less/about.less
@@ -1,23 +1,14 @@
 /* about page */
 @import 'base.less';
 @import 'header.less';
-@import 'footer.less';
-
-//color
+@import 'footer.less'; //color
 @font_color: #3e3e3e;
 @purple_blue: #202884;
 @bg_gray_white: #fafafa;
-@tidb_red: #e6002d;
-
-// width
-@video_width: 1124px;
-// height
-@video_height: calc(~'@{video_width}* 9/16');
-
-// line
-@1px_hr_width: 1.9rem;
-
-// animation_fadein
+@tidb_red: #e6002d; // width
+@video_width: 1124px; // height
+@video_height: calc(~'@{video_width}* 9/16'); // line
+@1px_hr_width: 1.9rem; // animation_fadein
 @animation_fadein: fadeIn 0.4s;
 
 section[class^='about-'],
@@ -108,8 +99,7 @@ section[class^='meetup-landingpage-'] {
     width: @video_width;
     height: @video_height;
     box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.5);
-    background: transparent
-      url('https://download.pingcap.com/images/video-poster.jpg') no-repeat 0 0;
+    background: transparent url("https://download.pingcap.com/images/video-poster.jpg") no-repeat 0 0;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -164,7 +154,7 @@ section[class^='meetup-landingpage-'] {
     width: 100%;
     margin-top: 1.5rem;
 
-    h2 {
+    h3 {
       font-size: 1rem;
       color: @purple_blue;
     }
@@ -199,6 +189,7 @@ section[class^='meetup-landingpage-'] {
         max-width: 7.5rem;
       }
     }
+
     .image-wrap {
       height: 2.4rem;
 
@@ -274,32 +265,32 @@ section[class^='meetup-landingpage-'] {
     }
   }
 }
-
 /* ---- particles.js container ---- */
 #particles-js {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: #fff;
-  background-image: url('');
+  background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
   z-index: -1;
 }
-
 @media (max-width: 600px) {
   .intro-video {
     .video-wrapper {
       width: 100%;
       height: auto;
       margin-top: 60px;
+
       #video {
         width: 100%;
         height: auto;
       }
     }
   }
+
   .about-contact .info .row,
   .about-culture .details .row {
     flex-direction: column;
