--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -1,15 +1,13 @@
 /* meetup page */
 @import 'base.less';
 @import 'about.less';
-
-@dark_blue: #100f2c;
-
-// animation_fadeIn
+@dark_blue: #100f2c; // animation_fadeIn
 @animation_fadeIn: fadeIn 1s;
 
 .layout-text-on-hover {
   width: 100%;
   height: auto;
+
   .image {
     position: relative;
     width: 100%;
@@ -73,8 +71,7 @@
       .inner-title {
         opacity: 1;
         transform: translate3d(0, 0, 0);
-        transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99),
-          opacity 0.4s;
+        transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99), opacity 0.4s;
 
         &:after {
           transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99) 0.2s;
@@ -86,13 +83,13 @@
 }
 
 section[class^='meetup-landingpage-'] {
-  h2 {
+  h3 {
     margin: 25px 0 16px;
     font-size: 1rem;
     color: @purple_blue;
   }
 
-  h3 {
+  h4 {
     margin: 10px 0;
     font-size: 0.8rem;
     font-weight: 400;
@@ -157,18 +154,18 @@ section[class^='meetup-landingpage-'] {
     text-align: right;
     color: white;
 
-    h1 {
+    h2 {
       margin-right: -4px;
       font-size: 2rem;
       color: white;
     }
 
-    h2 {
+    h3 {
       margin-bottom: 45px;
     }
 
-    h2,
     h3,
+    h4,
     p {
       color: white;
     }
@@ -198,11 +195,13 @@ section[class^='meetup-landingpage-'] {
     .item {
       flex-basis: 30%;
     }
+
     .layout-text-on-hover {
       // TODO: fix width/height ratio
       .image {
         padding-bottom: calc(100% / (4/3)); // 1x1 by default
       }
+
       .text {
         padding: 30px 10px;
       }
@@ -226,10 +225,12 @@ section[class^='meetup-landingpage-'] {
       .arrow-right {
         opacity: 0;
         display: none;
+
         svg {
           height: 1em;
         }
       }
+
       &:hover {
         .arrow-right {
           opacity: 1;
@@ -248,9 +249,11 @@ section[class^='meetup-landingpage-'] {
       min-height: 350px;
       flex-basis: 20%;
       padding: 0 @horizontal_padding;
+
       .layout-text-on-hover {
         .text {
           padding: 40px 20px;
+
           p {
             opacity: 0;
             color: @dark_blue;
@@ -266,8 +269,7 @@ section[class^='meetup-landingpage-'] {
             p {
               opacity: 1;
               transform: translate3d(0, 0, 0);
-              transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99),
-                opacity 0.4s;
+              transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99), opacity 0.4s;
             }
           }
         }
@@ -287,7 +289,6 @@ section[class^='meetup-landingpage-'] {
     margin: 0 auto;
   }
 }
-
 @media (max-width: 600px) {
   section[class^='meetup-landingpage-'] .details .item {
     flex-basis: 100%;
