--- a/src/less/sidebar.less
+++ b/src/less/sidebar.less
@@ -1,20 +1,11 @@
 /* tree navigator */
-
-@import 'base.less';
-
-// color
+@import 'base.less'; // color
 @text_color: #3e3e3e;
 @title_color: #142848;
-@nav_bg_color: #fbfbfb;
-
-// width
-@sidebar_width: 12.5rem;
-
-// height
+@nav_bg_color: #fbfbfb; // width
+@sidebar_width: 12.5rem; // height
 @nav_height: 2rem;
-@header_height: calc(~'1rem + @{nav_height}');
-// @header_height: calc(~'1rem + @{nav_height} + 3px');
-
+@header_height: calc(~'1rem + @{nav_height}'); // @header_height: calc(~'1rem + @{nav_height} + 3px');
 // animation_fadein_300
 @animation_fadein_300: fadeIn 0.3s;
 
@@ -34,6 +25,7 @@
     font-weight: 400;
     color: @title_color;
   }
+
   .rss {
     width: 1.1rem;
     height: 1.1rem;
@@ -47,11 +39,13 @@
       border-color: @theme_blue;
       background-color: @theme_blue;
       color: @white;
+
       svg * {
         fill: @white;
       }
     }
   }
+
   .all {
     display: inline-block;
     padding: 3px 9px;
@@ -81,6 +75,7 @@
       font-size: 0.7rem;
       color: #333;
     }
+
     a.sel,
     a.tag:hover {
       background-color: @theme_blue;
@@ -97,6 +92,7 @@
     ul {
       padding-left: 0.8rem;
     }
+
     & > ul {
       padding-left: 0;
     }
@@ -119,7 +115,7 @@
         margin-right: 0.3rem;
         width: 0.5rem;
         height: 0.5rem;
-        background-image: url('/images/icon-arrow-right.svg');
+        background-image: url("/images/icon-arrow-right.svg");
         background-size: 0.5rem 0.5rem;
       }
     }
@@ -128,7 +124,7 @@
       .icon {
         width: 0.5rem;
         height: 0.5rem;
-        background-image: url('/images/icon-arrow-down.svg');
+        background-image: url("/images/icon-arrow-down.svg");
         background-size: 0.5rem 0.5rem;
       }
     }
@@ -143,6 +139,7 @@
         a {
           color: @theme_blue;
         }
+
         svg {
           fill: @theme_blue;
         }
@@ -157,7 +154,7 @@
         margin-left: 0.3rem;
         width: 0.4rem;
         height: 0.4rem;
-        background-image: url('/images/icon-arrow-down.svg');
+        background-image: url("/images/icon-arrow-down.svg");
         background-size: 0.4rem 0.4rem;
       }
     }
@@ -166,13 +163,13 @@
       a {
         border-left: 1px solid fade(@theme_blue, 50%);
       }
+
       &.active a {
         border-left: 4px solid @theme_blue;
       }
     }
   }
 }
-
 /* The sticky */
 @media (min-width: 600px) {
   .sticky-sidebar {
