polish: add open-graph in meta and baidu-site-verification

--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -12,13 +12,16 @@
 <meta property="og:description" content="PingCAP is focused on developing distributed NewSQL and is the team building TiDB, an open-source distributed NewSQL database.">
 <meta property="og:url" content="https://www.pingcap.com/">
 <meta property="og:site_name" content="PingCAP">
-<meta property="og:image" content="">
+<meta property="og:image" content="/images/pingcap-opengraph.jpg">
+<meta property="og:image:secure_url" content="/images/pingcap-opengraph.jpg">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="PingCAP is focused on developing distributed NewSQL and is the team building TiDB, an open-source distributed NewSQL database.">
 <meta name="twitter:title" content="PingCAP">
 <meta name="twitter:site" content="@pingcap">
-<meta name="twitter:image" content="">
+<meta name="twitter:image:src" content="/images/pingcap-opengraph.jpg">
 <meta name="twitter:creator" content="@pingcap">
+<!-- baidu-site-verification  -->
+<meta name="baidu-site-verification" content="FujyAfbrqK" />
 <script type="application/ld+json">
 {
   "@context": "http:\/\/schema.org",
