--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -1,6 +1,7 @@
 {{ define "title" }}首页{{ end }}
 
 {{ define "headcss" }}
+  <meta name="baidu-site-verification" content="hrZ03lmoDB" />
   {{$.Scratch.Set "data_i18_cn" true }}
   {{$.Scratch.Set "data_i18_link" "/en" }}
   <style type="text/css" media="screen">
