--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,4 +1,6 @@
 {{ define "headcss" }}
+  <meta name="baidu-site-verification" content="hrZ03lmoDB" />
+  <meta name="google-site-verification" content="jq6Zrw3KkXdT10_zWGX2mg5r-t5UKybmdK0zTxF1ztg" />
   {{$.Scratch.Set "data_i18_link" "/index.html" }}
   <style type="text/css" media="screen">
       body {
