polish: add vendor folder for static lib files and change path to thems

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -42,7 +42,7 @@
     {{ partial "footer" . }}
   {{ end }}
 
-  <script src="/lib/jquery.min.js"></script>
+  <script src="/js/vendor/jquery.min.js"></script>
   {{ block "footjs" . }}{{ end }}
   <!-- TODO: hide search entry -->
   {{ if $data_i18_cn }}
