--- a/layouts/partials/head/ga.html
+++ b/layouts/partials/head/ga.html
@@ -9,5 +9,5 @@ ga.l = +new Date()
 ga('create', 'UA-99991864-4', 'auto')
 ga('send', 'pageview')
 </script>
-<script async src='https://download.pingcap.com/js/ga-analytics.js'></script>
+<script async src="/js/vendor/ga-analytics.js"></script>
 <!-- End Google Analytics -->
