--- a/layouts/partials/search/algolia-js.html
+++ b/layouts/partials/search/algolia-js.html
@@ -1,7 +1,7 @@
 <!-- at the end of the HEAD -->
-<link rel="stylesheet" href="https://download.pingcap.com/style/docsearch.css" />
+<link rel="stylesheet" href="/css/vendor/docsearch.css" />
 <!-- at the end of the BODY -->
-<script type="text/javascript" src="https://download.pingcap.com/js/docsearch.min.js"></script>
+<script type="text/javascript" src="/js/vendor/docsearch.min.js"></script>
 <script type="text/javascript">
 docsearch({
   apiKey: 'ad5e63b76a221558bdc65ab1abbec7a2',
@@ -18,13 +18,13 @@ docsearch({
     function isChinese (s) {
       //4E00 - 9FA5
       var patrn=/[\u4E00-\u9FA5]|[\uFE30-\uFFA0]/gi
-      if(!patrn.exec(s)) {  
-        return false;  
-      } else {  
-        return true;  
+      if(!patrn.exec(s)) {
+        return false;
+      } else {
+        return true;
       }
     }
-    
+
     // check hierarchy of suggestions isChinese
     function hasChHierarchy (hierarchy) {
       for (var key in hierarchy) {
@@ -36,7 +36,7 @@ docsearch({
       }
       return false
     }
-    
+
     var en_hits = hits.filter(function(hit){
       var hierarchy = hit.hierarchy
       return !isChinese(hit.anchor) && !hasChHierarchy(hierarchy) && !isChinese(hit.content)
