fix: fixed es6 not available in some browsers

--- a/layouts/partials/pre-loading.html
+++ b/layouts/partials/pre-loading.html
@@ -13,11 +13,13 @@
 </div>
 
 <script type="text/javascript">
-  window.onload = function() {
-    setTimeout(()=>{
-      document.getElementById('loading').setAttribute('style', 'display: none;');
-      document.getElementById('header').setAttribute('style', 'display: block;');
-      document.getElementById('landingpage').setAttribute('style', 'display: block;');
-    },600);
-  };
+window.onload = function() {
+  setTimeout(function() {
+    document.getElementById('loading').setAttribute('style', 'display: none;')
+    document.getElementById('header').setAttribute('style', 'display: block;')
+    document
+      .getElementById('landingpage')
+      .setAttribute('style', 'display: block;')
+  }, 600)
+}
 </script>
