polish: polish landing-page style in some mobile browsers

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -252,7 +252,9 @@
 
 @media (max-width: 600px) {
   .landingpage-slogan-mask {
-    padding-top: 12rem;
+    padding: 8rem 0 0;
+    height: auto;
+    min-height: 100vh;
   }
   .landingpage-slogan-mask .container {
     align-items: center;
@@ -267,6 +269,11 @@
     width: 90%;
     justify-content: space-around;
   }
+  .landingpage-features,
+  .landingpage-advantages {
+    padding-top: 3rem;
+  }
+
   .landingpage-features .item {
     flex-basis: 100%;
   }
@@ -295,11 +302,7 @@
     flex-direction: column;
     align-items: center;
     .btn {
-      margin-top: 4rem;
+      margin-top: 1.2rem;
     }
-  }
-
-  .landingpage-features {
-    padding: 10rem 0;
   }
 }
