polish: polish logic for filtering search results

--- a/layouts/partials/pre-loading.html
+++ b/layouts/partials/pre-loading.html
@@ -16,7 +16,7 @@
 window.onload = function() {
   setTimeout(function() {
     document.getElementById('loading').setAttribute('style', 'display: none;')
-    document.getElementById('header').setAttribute('style', 'display: block;')
+    document.getElementsByTagName('header')[0].setAttribute('style', 'display: block;')
     document
       .getElementById('landingpage')
       .setAttribute('style', 'display: block;')
