--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,16 +1,12 @@
 /* header module */
-@import './base.less';
-
-// height
+@import './base.less'; // height
 @nav_height: 2rem;
 @search_box_height: 1.8rem;
 @nav_brand_height: 1.8rem;
-@header_height: calc(~'1rem + @{nav_height} + 3px');
-
-// width
+@header_height: calc(~'1rem + @{nav_height} + 3px'); // width
 @search_box_width: 13rem;
 
-header {
+.header {
   width: 100%;
   min-height: @header_height;
   background-color: @bg_black_with_alpha90;
@@ -41,6 +37,7 @@ header {
   .nav-wrapper {
     display: flex;
     align-items: center;
+
     .navigations {
       display: flex;
       justify-content: flex-end;
@@ -67,8 +64,9 @@ header {
             padding: 0.5rem 0.2rem;
             // border-bottom: 3px solid fade(white, 0%);
           }
-          &.sel a,
-          & a:hover {
+
+          & a:hover,
+          &.sel a {
             // border-bottom: 3px solid white;
             color: fade(white, 50%);
             transition: all 0.5s ease;
@@ -79,6 +77,7 @@ header {
       .link-download {
         // margin: 0 0.8rem 0 0.5rem;
         margin: 0 0.8rem 0 0.5rem;
+
         &:hover {
           svg,
           svg * {
@@ -109,6 +108,7 @@ header {
           left: 8px;
           top: calc(~'(@{search_box_height} - 20px)/2');
         }
+
         &.btn-cancel {
           right: 8px;
           top: calc(~'(@{search_box_height} - 15px)/2');
@@ -146,40 +146,40 @@ header {
     }
   }
 }
-
 @media screen and (max-width: 600px) {
-  header .container {
+  .header .container {
     flex-direction: column;
     padding-top: @horizontal_padding;
   }
 
-  header .nav-wrapper {
+  .header .nav-wrapper {
     flex-flow: row wrap;
     justify-content: center;
   }
 
-  header .nav-wrapper {
-    .navigations, .global-search {
+  .header .nav-wrapper {
+    .global-search,
+    .navigations {
       margin-bottom: @horizontal_padding;
     }
   }
 
-  header .container .global-search .search-wrapper.show {
+  .header .container .global-search .search-wrapper.show {
     width: 13rem;
   }
 }
-
 // iphone 5
 @media screen and (max-width: 320px) {
-  header .nav-wrapper .navigations ul li {
+  .header .nav-wrapper .navigations ul li {
     margin: 0;
+
     a {
       padding-left: 4px;
       padding-right: 4px;
     }
   }
 
-  header .nav-wrapper .navigations .link-download {
-    margin:0 4px;
+  .header .nav-wrapper .navigations .link-download {
+    margin: 0 4px;
   }
 }
