polish: polish loading render

--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -5,11 +5,8 @@
   <style type="text/css" media="screen">
       body {
         height: 100%;
-        background-image: linear-gradient(to top, #080000, #100f2e) !important;
+        background: linear-gradient(to top, #080000, #100f2e) !important;
         color: #fff !important;
-      }
-      body header {
-        display: none;
       }
       body p {
         font-family: 'Lato Light' !important;
@@ -21,7 +18,7 @@
 {{ define "main" }}
 {{ partial "pre-loading.html" . }}
 
-<div id="landingpage" style="display: none;">
+<div id="landingpage">
   <section class="landingpage-slogan-mask">
       <div class="container">
           <img class="logo" src="/images/tidb-logo.png" alt="TiDB">
