--- a/layouts/partials/pre-loading.html
+++ b/layouts/partials/pre-loading.html
@@ -5,6 +5,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(to top, #080000, #100f2e);
+    z-index: 99;
+    animation: fadeOut 1s;
+  }
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 </style>
 
@@ -14,12 +25,6 @@
 
 <script type="text/javascript">
 window.onload = function() {
-  setTimeout(function() {
-    document.getElementById('loading').setAttribute('style', 'display: none;')
-    document.getElementsByTagName('header')[0].setAttribute('style', 'display: block;')
-    document
-      .getElementById('landingpage')
-      .setAttribute('style', 'display: block;')
-  }, 600)
+  document.getElementById('loading').setAttribute('style', 'display: none;')
 }
 </script>
