--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -7,12 +7,9 @@
   {{$.Scratch.Set "data_i18_link" "/en" }}
   <style type="text/css" media="screen">
       body {
-          height: 100%;
-          background-image: linear-gradient(to top, #080000, #100f2e) !important;
-          color: #fff !important;
-      }
-      body header {
-        display: none;
+        height: 100%;
+        background: linear-gradient(to top, #080000, #100f2e) !important;
+        color: #fff !important;
       }
       body p {
         font-weight: 300 !important;
@@ -23,7 +20,7 @@
 {{ define "main" }}
 {{ partial "pre-loading.html" . }}
 
-<div id="landingpage" style="display: none;">
+<div id="landingpage">
   <section class="landingpage-slogan-mask">
       <div class="container">
           <img class="logo" src="/images/tidb-logo.png" alt="TiDB">
