polish: polish sidebar render

--- a/src/less/sidebar.less
+++ b/src/less/sidebar.less
@@ -1,13 +1,17 @@
 /* tree navigator */
-@import 'base.less'; // color
+@import 'base.less';
+
+// color
 @text_color: #3e3e3e;
 @title_color: #142848;
-@nav_bg_color: #fbfbfb; // width
-@sidebar_width: 12.5rem; // height
+@nav_bg_color: #fbfbfb;
+
+ // width
+@sidebar_width: 12.5rem;
+
+// height
 @nav_height: 2rem;
-@header_height: calc(~'1rem + @{nav_height}'); // @header_height: calc(~'1rem + @{nav_height} + 3px');
-// animation_fadein_300
-@animation_fadein_300: fadeIn 0.3s;
+@header_height: calc(~'1rem + @{nav_height}');
 
 .sidebar {
   max-width: @sidebar_width;
@@ -87,7 +91,6 @@
   .st_tree {
     width: 100%;
     padding-left: 0;
-    .customAnimation(@animation_fadein_300);
 
     ul {
       padding-left: 0.8rem;
