--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -3,13 +3,19 @@
 @import './base.less';
 @import './header.less';
 @import './footer.less';
-@import './sidebar.less'; // color
+@import './sidebar.less';
+
+// color
 @text_color: #3e3e3e;
 @title_color: #142848;
 @code_color: #c7254e;
-@code_bg_color: #f9f2f4; // padding
-@pre_padding: 9.5px; // animation_fadein
-@animation_fadein: fadeIn 0.6s;
+@code_bg_color: #f9f2f4;
+
+// padding
+@pre_padding: 9.5px;
+
+// animation_fadein_300
+@animation_fadein_300: fadeIn 0.3s;
 /** documentation list **/
 .blog,
 .doc,
@@ -27,7 +33,7 @@
   .list,
   .sidebar,
   .sidebar-page {
-    .customAnimation(@animation_fadein);
+    .customAnimation(@animation_fadein_300);
   }
 
   .sidebar,
