polish: change loading style

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -18,7 +18,7 @@
 // others
 @line_height: 1.8;
 // animation_fadein
-@animation_fadein: fadeIn 0.4s;
+@animation_fadein: fadeIn .6s;
 
 #landingpage {
   .customAnimation(@animation_fadein);
