polish: use CDN to host static resources

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -42,7 +42,7 @@
     {{ partial "footer" . }}
   {{ end }}
 
-  <script src="/js/vendor/jquery.min.js"></script>
+  <script src="https://download.pingcap.com/js/jquery.min.js"></script>
   {{ block "footjs" . }}{{ end }}
 
   {{ if $data_i18_cn }}
