--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -20,7 +20,7 @@
 
 {{ define "footjs" }}
 <!-- particles -->
-<script type="text/javascript" src="/js/vendor/particles.js"></script>
+<script type="text/javascript" src="https://download.pingcap.com/js/particles.js"></script>
 <script type="text/javascript">
 const particlesConfig = {
   particles: {
