--- a/layouts/partials/mailchimp-js.html
+++ b/layouts/partials/mailchimp-js.html
@@ -24,7 +24,7 @@
     </form>
 </div>
 
-<script type="text/javascript" src="/js/vendor/mc-validate.js"></script>
+<script type="text/javascript" src="https://download.pingcap.com/js/mc-validate.js"></script>
 <script type='text/javascript'>
 ;(function($) {
   window.fnames = new Array()
