--- a/layouts/partials/particles.html
+++ b/layouts/partials/particles.html
@@ -1,6 +1,6 @@
 <div id="particles-js"></div>
 
-<script type="text/javascript" src="/particles.js"></script>
+<script type="text/javascript" src="https://download.pingcap.com/js/particles.js"></script>
 <script type="text/javascript">
 const particlesConfig = {
   particles: {
