--- a/layouts/partials/qr-code.html
+++ b/layouts/partials/qr-code.html
@@ -1,7 +1,7 @@
 <div id="js_qr_code" class="qr_code_outer f-hide">
     <div class="qr_code_inner">
         <div class="qr_code">
-            <img id="js_qr_code_img" class="qr_code_img" src="https://download.pingcap.com/images/qrcode.jpg">
+            <img id="js_qr_code_img" class="qr_code_img" src="https://download.pingcap.com/images/qrcode-min.jpg">
             <p>微信扫一扫<br> 微信ID：pingcap2015</p>
         </div>
     </div>
