--- a/layouts/partials/search/algolia-js.html
+++ b/layouts/partials/search/algolia-js.html
@@ -1,7 +1,7 @@
 <!-- at the end of the HEAD -->
-<link rel="stylesheet" href="/css/vendor/docsearch.css" />
+<link rel="stylesheet" href="https://download.pingcap.com/style/docsearch.css" />
 <!-- at the end of the BODY -->
-<script type="text/javascript" src="/js/vendor/docsearch.min.js"></script>
+<script type="text/javascript" src="https://download.pingcap.com/js/docsearch.min.js"></script>
 <script type="text/javascript">
 docsearch({
   apiKey: 'ad5e63b76a221558bdc65ab1abbec7a2',
