--- a/src/less/index.less
+++ b/src/less/index.less
@@ -18,7 +18,7 @@
 // others
 @line_height: 1.8;
 // animation_fadein
-@animation_fadein: fadeIn .6s;
+@animation_fadein: fadeIn 0.6s;
 
 #landingpage {
   .customAnimation(@animation_fadein);
@@ -31,7 +31,8 @@
   width: 100%;
   height: 100vh;
   padding: calc(~'@{vertical_padding} + @{header_height}') 0;
-  background: url("/images/slogan-mask.png") no-repeat center top;
+  background: url('https://download.pingcap.com/images/bg-landingpage-slogan.png')
+    no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
 
@@ -114,7 +115,7 @@
         width: 20px;
         height: 19px;
         margin-top: -10px;
-        background: url("/images/icon-github.svg");
+        background: url('/images/icon-github.svg');
         background-size: 20px 19px;
       }
     }
@@ -123,7 +124,8 @@
 /* Section 2 */
 .landingpage-features {
   padding: calc(~'@{vertical_padding} + @{header_height}') 0;
-  background: url("/images/features-mask.png") no-repeat center top;
+  background: url('https://download.pingcap.com/images/bg-landingpage-features.png')
+    no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
 
@@ -201,7 +203,8 @@
 /* Section 3 */
 .landingpage-advantages {
   padding: calc(~'@{vertical_padding} + @{header_height}') 0 10rem;
-  background: url("/images/advantages-mask.png") no-repeat center bottom @dark_blue;
+  background: url('https://download.pingcap.com/images/bg-landingpage-advantages.png')
+    no-repeat center bottom @dark_blue;
   background-size: cover;
 
   h3 {
