--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -10,7 +10,7 @@
     <div class="container">
       {{ $posts := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil  }}
 
-      {{ partial "navs/tags-nav.html" (dict "title" "Popular Tags" "posts" $posts "rss" "/blog/index.xml" "global" .) }}
+      {{ partial "navs/tags-nav.html" (dict "type" "list" "title" "Popular Tags" "posts" $posts "rss" "/blog/index.xml" "global" .) }}
 
       {{ partial "list.html" (dict "posts" $posts.ByDate.Reverse "hasMetaData" "true" "hasBrief" "true" "global" .) }}
     </div>
