feat: change download link in header

--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -10,14 +10,16 @@
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
           <!-- <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li> -->
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
+          <li>
+            <a class="link-download" href="https://github.com/pingcap/tidb/releases" target="_blank">下载
+              {{ partial "svgs/icon-external-link.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}
+            </a>
+          </li>
         </ul>
-        <a class="link-download" href="/docs-cn/op-guide/ansible-deployment">
-          {{ partial "svgs/icon-download-tidb.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}
-        </a>
       </div>
       <div class="global-search">
-        <button class="btn-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}</button>
         <div class="search-wrapper">
+          <span class="icon-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}</span>
           {{ partial "search/ui.html" . }}
           <button class="btn-cancel">{{ partial "svgs/icon-cross.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}</button>
         </div>
