test: test for enableGitInfo

--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -26,6 +26,8 @@
         <div class="article-toc"></div>
 
         {{ partial "archives/operate-links.html" (dict "global" .) }}
+
+         {{ .GitInfo }}
     </div>
 
     <div class="sidebar-page sticky-sidebar">
