--- a/src/less/header.less
+++ b/src/less/header.less
@@ -8,7 +8,7 @@
 @header_height: calc(~'1rem + @{nav_height} + 3px');
 
 // width
-@search_box_width: 13rem;
+@search_box_width: 12rem;
 
 .header {
   width: 100%;
@@ -65,7 +65,7 @@
             display: flex;
             align-items: center;
             height: @nav_height;
-            padding: 0.5rem 0.3rem;
+            padding: 0.5rem 0.4rem;
           }
 
           & a:hover,
@@ -133,9 +133,9 @@
 
       #search-input {
         position: relative;
-        width: calc(~'@{search_box_width} - 1.2rem');
+        width: @search_box_width;
         height: 100%;
-        padding: 0.5rem 0.2rem 0.5rem 1.6rem;
+        padding: 0.5rem 0.5rem 0.5rem 1.6rem;
         border: none;
         outline: none;
         background-color: transparent;
@@ -163,7 +163,7 @@
       margin: 0;
 
       a {
-        padding: 0 4px;
+        padding: 2px 4px;
       }
     }
   }
