polish: change template path for landing-page pre-loading

--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -15,7 +15,7 @@
 {{ end }}
 
 {{ define "main" }}
-{{ partial "pre-loading.html" . }}
+{{ partial "pre-loading/landingpage.html" . }}
 
 <div id="landingpage">
   <section class="landingpage-slogan-mask">
